# gravity-log-collector-plugin

./: CMakeLists.txt  README.md
share/: com.ispirata.Hemera.DeviceLog.Configuration.json  com.ispirata.Hemera.DeviceLog.Status.json  com.ispirata.Hemera.DeviceLog.json
src/: CMakeLists.txt  DeviceLogConfiguration.cpp  DeviceLogConfiguration.h  LogCollector.cpp  LogCollector.h  LogCollectorPlugin.cpp  LogCollectorPlugin.h
